--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="12dp"
     tools:context=".ui.MainActivity">
 
     <TextView
@@ -41,21 +42,19 @@
         app:layout_constraintTop_toBottomOf="@+id/layout_change"
         tools:text="Using one logic/physical display - unspanned" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_data"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-
-
-
     <Button
         android:id="@+id/btn_open_app_demo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="打开全局VM Demo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="..."
+        app:layout_constraintTop_toBottomOf="@id/btn_open_app_demo"
+        app:layout_constraintStart_toStartOf="@id/btn_open_app_demo"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
