--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btn_open_brv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="打开BRV"
+        app:layout_constraintStart_toStartOf="@id/btn_open_app_demo"
+        app:layout_constraintTop_toBottomOf="@id/btn_open_app_demo" />
+
     <TextView
         android:id="@+id/tv_test"
         android:layout_width="wrap_content"
